2005-11-18  Martin Hunt  <hunt@redhat.com>

	PR 1837
	* testsuite/buildko/one.stp: Replace printk.
	* testsuite/buildok/one.stp: Ditto.
	* testsuite/buildok/two.stp: Ditto.
	* testsuite/semko/fifteen.stp: Ditto.	
	* testsuite/semko/fourteen.stp: Ditto.	
	* testsuite/semko/thirteen.stp: Ditto.	
	* testsuite/transok/eight.stp: Ditto.	
	* testsuite/transok/seven.stp: Ditto.	
	* testsuite/transok/six.stp: Ditto.	

	* tapsets.cxx (*::emit_probe_entries): Replace printk() calls 
	with _stp_warn().

	* stap.1.in: Replace printk with printf in example.

	* stapfuncs.5.in: Remove docs for printk and add for
	print and printf.

	* tapset/logging.stp (printk): Deleted.

2005-11-13  Graydon Hoare  <graydon@redhat.com>

	* staptree.h (struct indexable): New struct.
	(classify_indexable): New function.
	(classify_const_indexable): New function.
	(struct symbol): Implement indexable.
	(struct arrayindex): Take indexable as base.
	(struct foreach_loop): Take indexable as base. 
	(struct print_format): New struct.
	(enum stat_component_type): New enum.
	(struct stat_op): New struct.
	(enum historgram_type): New enum.
	(struct hist_op): New struct.
	(struct visitor) 
	(struct traversing_visitor)
	(struct throwing_visitor)
	(struct deep_copy_visitor): Add new visitor methods.
	(require): Specialize for indexable*.

	* staptree.cxx (print_format::*)
	(stat_op::*)
	(hist_op::*)
	(indexable::*)
	(traversing_visitor::*)
	(throwing_visitor::*)
	(deep_copy_visitor::*)
	(classify_indexable)
	(classify_const_indexable): Implement
	(deep_copy_visitor::*): Update to use indexables.

	* parse.h (parser::parse_indexable): New method.
	(parser::parse_hist_op_or_bare_name): New method.

	* parse.cxx (lexer::scan): Accept @ in identifiers.
	(parser::parse_array_in)
	(parser::parse_foreach_loop): Call parse_indexable.
	(parser::parse_hist_op_or_bare_name): Implement.
	(parser::parse_indexable): Implement.
	(parser::parse_symbol): Accept printf, stat_ops, hist_ops.
