@@ -69,6 +69,17 @@ reasonable range (1 to around a million), and M is restricted to be
 smaller than N.  There are no target variables provided in either
 context.  It is possible for such probes to be run concurrently on
 a multi-processor computer.
+.PP
+Alternatively, intervals may be specified in units of milliseconds.
+There are two probe point variants similar to the jiffies timer:
+.SAMPLE
+timer.ms(N)
+timer.ms(N).randomize(M)
+.ESAMPLE
+Here, N and M are specified in milliseconds.  The probe intervals will be
+rounded up to the nearest jiffies interval for the actual timer.  If the
+"randomize" component is given, then the random value will be added to the
+interval before the conversion to jiffies.
 
 .SS DWARF
 
