@@ -3,4 +3,6 @@
 global i, j
 probe timer.jiffies(100) { i++ }
 probe timer.jiffies(100).randomize(100) { j++ }
+probe timer.ms(100) { i++ }
+probe timer.ms(100).randomize(100) { j++ }
 probe end { log ("i=" . string(i) . " j=" . string(j)) }
